--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -1394,7 +1394,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "281/363 [======================>.......] - ETA: 1s - loss: 2.3584"
+      "363/363 [==============================] - ETA: 0s - loss: 2.0488"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-04 20:17:42.764168: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "363/363 [==============================] - 7s 16ms/step - loss: 2.0488 - val_loss: 2.1316\n",
+      "Epoch 2/20\n",
+      "363/363 [==============================] - 5s 13ms/step - loss: 0.8090 - val_loss: 0.7513\n",
+      "Epoch 3/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.7132 - val_loss: 0.7071\n",
+      "Epoch 4/20\n",
+      "363/363 [==============================] - 6s 15ms/step - loss: 0.6756 - val_loss: 0.6787\n",
+      "Epoch 5/20\n",
+      "363/363 [==============================] - 5s 14ms/step - loss: 0.6452 - val_loss: 0.6408\n",
+      "Epoch 6/20\n",
+      "363/363 [==============================] - 5s 12ms/step - loss: 0.6182 - val_loss: 0.6460\n",
+      "Epoch 7/20\n",
+      "363/363 [==============================] - 5s 13ms/step - loss: 0.5944 - val_loss: 0.6482\n",
+      "Epoch 8/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.5732 - val_loss: 0.5825\n",
+      "Epoch 9/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.5540 - val_loss: 0.5741\n",
+      "Epoch 10/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.5370 - val_loss: 0.5740\n",
+      "Epoch 11/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.5225 - val_loss: 0.5056\n",
+      "Epoch 12/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.5089 - val_loss: 0.5114\n",
+      "Epoch 13/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4975 - val_loss: 0.4889\n",
+      "Epoch 14/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4873 - val_loss: 0.4642\n",
+      "Epoch 15/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4782 - val_loss: 0.4495\n",
+      "Epoch 16/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4702 - val_loss: 0.4400\n",
+      "Epoch 17/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4635 - val_loss: 0.4283\n",
+      "Epoch 18/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4574 - val_loss: 0.4200\n",
+      "Epoch 19/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4518 - val_loss: 0.4160\n",
+      "Epoch 20/20\n",
+      "363/363 [==============================] - 4s 12ms/step - loss: 0.4474 - val_loss: 0.4118\n",
+      "162/162 [==============================] - 1s 6ms/step - loss: 0.4345\n",
+      "1/1 [==============================] - 0s 128ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-04 20:19:10.256341: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     }
    ],
