--- a/10-Introduction_to_Artificial_Neural_Networks.ipynb
+++ b/10-Introduction_to_Artificial_Neural_Networks.ipynb
@@ -5403,7 +5403,208 @@
       "Epoch 44/100\n",
       "242/242 [==============================] - 305s 1s/step - loss: 0.2991 - val_loss: 0.3213\n",
       "Epoch 45/100\n",
-      "242/242 [==============================] - ETA: 0s - loss: 0.2996"
+      "242/242 [==============================] - 9s 36ms/step - loss: 0.2996 - val_loss: 0.2943\n",
+      "Epoch 46/100\n",
+      "242/242 [==============================] - 5s 22ms/step - loss: 0.2978 - val_loss: 0.3262\n",
+      "Epoch 47/100\n",
+      "242/242 [==============================] - 5s 21ms/step - loss: 0.2960 - val_loss: 0.2917\n",
+      "Epoch 48/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2960 - val_loss: 0.2907\n",
+      "Epoch 49/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2934 - val_loss: 0.3362\n",
+      "Epoch 50/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2939 - val_loss: 0.3117\n",
+      "Epoch 51/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2922 - val_loss: 0.3284\n",
+      "Epoch 52/100\n",
+      "242/242 [==============================] - 5s 19ms/step - loss: 0.2920 - val_loss: 0.3117\n",
+      "Epoch 53/100\n",
+      "242/242 [==============================] - 4s 19ms/step - loss: 0.2922 - val_loss: 0.2888\n",
+      "Epoch 54/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2906 - val_loss: 0.3021\n",
+      "Epoch 55/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2889 - val_loss: 0.2878\n",
+      "Epoch 56/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2882 - val_loss: 0.3004\n",
+      "Epoch 57/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2878 - val_loss: 0.3140\n",
+      "Epoch 58/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2881 - val_loss: 0.2938\n",
+      "Epoch 59/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2862 - val_loss: 0.3035\n",
+      "Epoch 60/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2871 - val_loss: 0.2860\n",
+      "Epoch 61/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2849 - val_loss: 0.2994\n",
+      "Epoch 62/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2839 - val_loss: 0.2881\n",
+      "Epoch 63/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2838 - val_loss: 0.2883\n",
+      "Epoch 64/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2843 - val_loss: 0.3039\n",
+      "Epoch 65/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2830 - val_loss: 0.2845\n",
+      "Epoch 66/100\n",
+      "242/242 [==============================] - 5s 19ms/step - loss: 0.2818 - val_loss: 0.3323\n",
+      "Epoch 67/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2813 - val_loss: 0.2882\n",
+      "Epoch 68/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2829 - val_loss: 0.3085\n",
+      "Epoch 69/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2795 - val_loss: 0.2842\n",
+      "Epoch 70/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2783 - val_loss: 0.2923\n",
+      "Epoch 71/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2795 - val_loss: 0.2915\n",
+      "Epoch 72/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2787 - val_loss: 0.2837\n",
+      "Epoch 73/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2780 - val_loss: 0.2896\n",
+      "Epoch 74/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2784 - val_loss: 0.2805\n",
+      "Epoch 75/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2769 - val_loss: 0.3039\n",
+      "Epoch 76/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2750 - val_loss: 0.3571\n",
+      "Epoch 77/100\n",
+      "242/242 [==============================] - 5s 22ms/step - loss: 0.2781 - val_loss: 0.2776\n",
+      "Epoch 78/100\n",
+      "242/242 [==============================] - 4s 18ms/step - loss: 0.2768 - val_loss: 0.3031\n",
+      "Epoch 79/100\n",
+      "242/242 [==============================] - 16s 65ms/step - loss: 0.2751 - val_loss: 0.2856\n",
+      "Epoch 80/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.2742 - val_loss: 0.2770\n",
+      "Epoch 81/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2750 - val_loss: 0.2971\n",
+      "Epoch 82/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2736 - val_loss: 0.2859\n",
+      "Epoch 83/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2726 - val_loss: 0.3341\n",
+      "Epoch 84/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2755 - val_loss: 0.3154\n",
+      "Epoch 85/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2725 - val_loss: 0.2824\n",
+      "Epoch 86/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2715 - val_loss: 0.3034\n",
+      "Epoch 87/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2721 - val_loss: 0.3138\n",
+      "Epoch 88/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.2713 - val_loss: 0.2739\n",
+      "Epoch 89/100\n",
+      "242/242 [==============================] - 4s 17ms/step - loss: 0.2709 - val_loss: 0.3082\n",
+      "Epoch 90/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.2707 - val_loss: 0.2822\n",
+      "Epoch 91/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.2713 - val_loss: 0.2902\n",
+      "Epoch 92/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.2717 - val_loss: 0.2735\n",
+      "Epoch 93/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2696 - val_loss: 0.3434\n",
+      "Epoch 94/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2687 - val_loss: 0.2797\n",
+      "Epoch 95/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2687 - val_loss: 0.3185\n",
+      "Epoch 96/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2673 - val_loss: 0.3033\n",
+      "Epoch 97/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2676 - val_loss: 0.2876\n",
+      "Epoch 98/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2683 - val_loss: 0.2795\n",
+      "Epoch 99/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2666 - val_loss: 0.3177\n",
+      "Epoch 100/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.2680 - val_loss: 0.2879\n",
+      "121/121 [==============================] - 1s 6ms/step - loss: 0.2852\n",
+      "[CV] END learning_rate=0.0045455096956331, n_hidden=3, n_neurons=30; total time=12.5min\n",
+      "Epoch 1/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-08 18:58:29.589973: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "242/242 [==============================] - ETA: 0s - loss: 1.9684"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-08 18:58:32.739621: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "242/242 [==============================] - 4s 14ms/step - loss: 1.9684 - val_loss: 21.0415\n",
+      "Epoch 2/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.9578 - val_loss: 5.3874\n",
+      "Epoch 3/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.6838 - val_loss: 0.6157\n",
+      "Epoch 4/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.6003 - val_loss: 0.5618\n",
+      "Epoch 5/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.5677 - val_loss: 0.5258\n",
+      "Epoch 6/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.5414 - val_loss: 0.5032\n",
+      "Epoch 7/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.5193 - val_loss: 0.4760\n",
+      "Epoch 8/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.5010 - val_loss: 0.4716\n",
+      "Epoch 9/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4850 - val_loss: 0.4882\n",
+      "Epoch 10/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4717 - val_loss: 0.4395\n",
+      "Epoch 11/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4605 - val_loss: 0.4317\n",
+      "Epoch 12/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4511 - val_loss: 0.4310\n",
+      "Epoch 13/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4429 - val_loss: 0.4202\n",
+      "Epoch 14/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4363 - val_loss: 0.4429\n",
+      "Epoch 15/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4302 - val_loss: 0.4337\n",
+      "Epoch 16/100\n",
+      "242/242 [==============================] - 3s 12ms/step - loss: 0.4252 - val_loss: 0.4196\n",
+      "Epoch 17/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4206 - val_loss: 0.4533\n",
+      "Epoch 18/100\n",
+      "242/242 [==============================] - 3s 13ms/step - loss: 0.4171 - val_loss: 0.4094\n",
+      "Epoch 19/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4131 - val_loss: 0.4292\n",
+      "Epoch 20/100\n",
+      "242/242 [==============================] - 1039s 4s/step - loss: 0.4105 - val_loss: 0.4185\n",
+      "Epoch 21/100\n",
+      "242/242 [==============================] - 255s 1s/step - loss: 0.4082 - val_loss: 0.4268\n",
+      "Epoch 22/100\n",
+      "242/242 [==============================] - 699s 3s/step - loss: 0.4048 - val_loss: 0.4125\n",
+      "Epoch 23/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.4030 - val_loss: 0.4326\n",
+      "Epoch 24/100\n",
+      "242/242 [==============================] - 3s 11ms/step - loss: 0.4012 - val_loss: 0.3878\n",
+      "Epoch 25/100\n",
+      "242/242 [==============================] - 6s 24ms/step - loss: 0.3986 - val_loss: 0.4412\n",
+      "Epoch 26/100\n",
+      "242/242 [==============================] - 4s 16ms/step - loss: 0.3975 - val_loss: 0.3809\n",
+      "Epoch 27/100\n",
+      "242/242 [==============================] - 3s 14ms/step - loss: 0.3956 - val_loss: 0.4428\n",
+      "Epoch 28/100\n",
+      "242/242 [==============================] - 3s 14ms/step - loss: 0.3934 - val_loss: 0.3986\n",
+      "Epoch 29/100\n",
+      "242/242 [==============================] - 4s 15ms/step - loss: 0.3920 - val_loss: 0.4270\n",
+      "Epoch 30/100\n",
+      "242/242 [==============================] - 3s 14ms/step - loss: 0.3911 - val_loss: 0.3758\n",
+      "Epoch 31/100\n",
+      " 87/242 [=========>....................] - ETA: 1s - loss: 0.3947"
      ]
     }
    ],
