--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -310,6 +310,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['deserialize',\n",
+       " 'elu',\n",
+       " 'exponential',\n",
+       " 'gelu',\n",
+       " 'get',\n",
+       " 'hard_sigmoid',\n",
+       " 'linear',\n",
+       " 'relu',\n",
+       " 'selu',\n",
+       " 'serialize',\n",
+       " 'sigmoid',\n",
+       " 'softmax',\n",
+       " 'softplus',\n",
+       " 'softsign',\n",
+       " 'swish',\n",
+       " 'tanh']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[m for m in dir(keras.activations) if not m.startswith(\"_\")]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LeakyReLU', 'PReLU', 'ReLU', 'ThresholdedReLU']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[m for m in dir(keras.layers) if \"relu\" in m.lower()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(X_train_full, y_train_full), (X_test, y_test) = keras.datasets.fashion_mnist.load_data()\n",
+    "X_train_full = X_train_full / 255.0\n",
+    "X_test = X_test / 255.0\n",
+    "X_valid, X_train = X_train_full[:5000], X_train_full[5000:]\n",
+    "y_valid, y_train = y_train_full[:5000], y_train_full[5000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-12 23:19:34.255227: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-09-12 23:19:34.257544: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n",
+      "\n",
+      "systemMemory: 8.00 GB\n",
+      "maxCacheSize: 2.67 GB\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    keras.layers.Dense(300, kernel_initializer=\"he_normal\"),\n",
+    "    keras.layers.LeakyReLU(),\n",
+    "    keras.layers.Dense(100, kernel_initializer=\"he_normal\"),\n",
+    "    keras.layers.LeakyReLU(),\n",
+    "    keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "              metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-12 23:19:46.500180: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 135/1719 [=>............................] - ETA: 24s - loss: 2.2248 - accuracy: 0.1819"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(X_train, y_train, epochs=10,\n",
+    "                    validation_data=(X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
