--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -428,34 +428,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/2\n",
+      "1719/1719 [==============================] - ETA: 0s - loss: 0.8809 - accuracy: 0.7078"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-12 23:19:46.500180: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2023-09-12 23:20:43.870447: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 135/1719 [=>............................] - ETA: 24s - loss: 2.2248 - accuracy: 0.1819"
+      "1719/1719 [==============================] - 31s 18ms/step - loss: 0.8809 - accuracy: 0.7078 - val_loss: 0.7587 - val_accuracy: 0.7450\n",
+      "Epoch 2/2\n",
+      "1719/1719 [==============================] - 30s 17ms/step - loss: 0.7190 - accuracy: 0.7577 - val_loss: 0.6596 - val_accuracy: 0.7796\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit(X_train, y_train, epochs=10,\n",
+    "history = model.fit(X_train, y_train, epochs=2,\n",
     "                    validation_data=(X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    keras.layers.Dense(300, kernel_initializer=\"he_normal\"),\n",
+    "    keras.layers.PReLU(),\n",
+    "    keras.layers.Dense(100, kernel_initializer=\"he_normal\"),\n",
+    "    keras.layers.PReLU(),\n",
+    "    keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "              metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-12 23:21:22.255535: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1132/1719 [==================>...........] - ETA: 12s - loss: 1.4790 - accuracy: 0.5487"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "history = model.fit(X_train, y_train, epochs=2,\n",
+    "                    validation_data=(X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ELU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elu(z, alpha=1):\n",
+    "    return np.where(z < 0, alpha * (np.exp(z) - 1), z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(z, elu(z), \"b-\", linewidth=2)\n",
+    "plt.plot([-5, 5], [0, 0], 'k-')\n",
+    "plt.plot([-5, 5], [-1, -1], 'k--')\n",
+    "plt.plot([0, 0], [-2.2, 3.2], 'k-')\n",
+    "plt.grid(True)\n",
+    "plt.title(r\"ELU activation function ($\\alpha=1$)\", fontsize=14)\n",
+    "plt.axis([-5, 5, -2.2, 3.2])\n",
+    "\n",
+    "save_fig(\"elu_plot\")\n",
+    "plt.show()"
    ]
   },
   {
