--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -784,7 +784,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  61/1719 [>.............................] - ETA: 9:31 - loss: 2.1223 - accuracy: 0.2208"
+      "1719/1719 [==============================] - ETA: 0s - loss: 1.1368 - accuracy: 0.5727"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-13 22:07:06.904417: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 1422s 821ms/step - loss: 1.1368 - accuracy: 0.5727 - val_loss: 0.7831 - val_accuracy: 0.7018\n",
+      "Epoch 2/2\n",
+      "1719/1719 [==============================] - 631s 367ms/step - loss: 0.7203 - accuracy: 0.7305 - val_loss: 0.5987 - val_accuracy: 0.7828\n"
      ]
     }
    ],
@@ -800,9 +816,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-13 22:18:10.797213: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - ETA: 0s - loss: 1.7844 - accuracy: 0.2741"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-13 22:24:09.329555: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 375s 210ms/step - loss: 1.7844 - accuracy: 0.2741 - val_loss: 1.3367 - val_accuracy: 0.4130\n",
+      "Epoch 2/2\n",
+      "1719/1719 [==============================] - 371s 216ms/step - loss: 1.1843 - accuracy: 0.5117 - val_loss: 0.8919 - val_accuracy: 0.6574\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
