--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -882,6 +882,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(300, activation=\"relu\"),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_4\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_4 (Flatten)         (None, 784)               0         \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 784)              3136      \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " dense_212 (Dense)           (None, 300)               235500    \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 300)              1200      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " dense_213 (Dense)           (None, 100)               30100     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 100)              400       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " dense_214 (Dense)           (None, 10)                1010      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 271,346\n",
+      "Trainable params: 268,978\n",
+      "Non-trainable params: 2,368\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('batch_normalization/gamma:0', True),\n",
+       " ('batch_normalization/beta:0', True),\n",
+       " ('batch_normalization/moving_mean:0', False),\n",
+       " ('batch_normalization/moving_variance:0', False)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bn1 = model.layers[1]\n",
+    "[(var.name, var.trainable) for var in bn1.variables]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
