--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -978,7 +978,51 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-15 00:08:37.749756: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - ETA: 0s - loss: 0.8448 - accuracy: 0.7171"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-15 00:09:42.011332: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 68s 37ms/step - loss: 0.8448 - accuracy: 0.7171 - val_loss: 0.5570 - val_accuracy: 0.8130\n",
+      "Epoch 2/5\n",
+      "1719/1719 [==============================] - 60s 35ms/step - loss: 0.5732 - accuracy: 0.8026 - val_loss: 0.4801 - val_accuracy: 0.8408\n",
+      "Epoch 3/5\n",
+      "1719/1719 [==============================] - 101s 58ms/step - loss: 0.5190 - accuracy: 0.8206 - val_loss: 0.4446 - val_accuracy: 0.8528\n",
+      "Epoch 4/5\n",
+      "1719/1719 [==============================] - 75s 44ms/step - loss: 0.4822 - accuracy: 0.8329 - val_loss: 0.4220 - val_accuracy: 0.8612\n",
+      "Epoch 5/5\n",
+      "1719/1719 [==============================] - 69s 40ms/step - loss: 0.4550 - accuracy: 0.8414 - val_loss: 0.4065 - val_accuracy: 0.8650\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(X_train, y_train, epochs=5,\n",
     "                    validation_data=(X_valid, y_valid))"
