--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1074,7 +1074,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 522/1719 [========>.....................] - ETA: 39s - loss: 1.4331 - accuracy: 0.5335"
+      "1719/1719 [==============================] - ETA: 0s - loss: 1.0260 - accuracy: 0.6733"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-17 15:44:18.524864: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 63s 35ms/step - loss: 1.0260 - accuracy: 0.6733 - val_loss: 0.6743 - val_accuracy: 0.7860\n"
      ]
     }
    ],
@@ -1088,6 +1102,41 @@
    "metadata": {},
    "source": [
     "### Gradient Clipping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = keras.optimizers.SGD(clipvalue=1.0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = keras.optimizers.SGD(clipnorm=1.0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reusing Pretrained Layers\n",
+    "### Reusing a Keras model\n",
+    "Let's split the fashion MNIST training set in two:\n",
+    "\n",
+    "- X_train_A: all images of all items except for sandals and shirts (classes 5 and 6).\n",
+    "\n",
+    "- X_train_B: a much smaller training set of just the first 200 images of sandals or shirts.\n",
+    "\n",
+    "The validation set and the test set are also split this way, but without restricting the number of images.\n",
+    "\n",
+    "We will train a model on set A (classification task with 8 classes), and try to reuse it to tackle set B (binary classification). We hope to transfer a little bit of knowledge from task A to task B, since classes in set A (sneakers, ankle boots, coats, t-shirts, etc.) are somewhat similar to classes in set B (sandals and shirts). However, since we are using Dense layers, only patterns that occur at the same location can be reused (in contrast, convolutional layers will transfer much better, since learned patterns can be detected anywhere on the image, as we will see in the CNN chapter)."
    ]
   },
   {
