--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1141,6 +1141,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_dataset(X, y):\n",
+    "    y_5_or_6 = (y == 5) | (y == 6) # sandals or shirts\n",
+    "    y_A = y[~y_5_or_6]\n",
+    "    y_A[y_A > 6] -= 2 # class indices 7, 8, 9 should be moved to 5, 6, 7\n",
+    "    y_B = (y[y_5_or_6] == 6).astype(np.float32) # binary classification task: is it a shirt (class 6)?\n",
+    "    return ((X[~y_5_or_6], y_A),\n",
+    "            (X[y_5_or_6], y_B))\n",
+    "\n",
+    "(X_train_A, y_train_A), (X_train_B, y_train_B) = split_dataset(X_train, y_train)\n",
+    "(X_valid_A, y_valid_A), (X_valid_B, y_valid_B) = split_dataset(X_valid, y_valid)\n",
+    "(X_test_A, y_test_A), (X_test_B, y_test_B) = split_dataset(X_test, y_test)\n",
+    "X_train_B = X_train_B[:200]\n",
+    "y_train_B = y_train_B[:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43986, 28, 28)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_A.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 28, 28)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_B.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-17 15:46:11.510540: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  51/1375 [>.............................] - ETA: 47s - loss: 1.5660 - accuracy: 0.4210"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
+    "model_A = keras.models.Sequential()\n",
+    "model_A.add(keras.layers.Flatten(input_shape=[28, 28]))\n",
+    "for n_hidden in (300, 100, 50, 50, 50):\n",
+    "    model_A.add(keras.layers.Dense(n_hidden, activation=\"selu\"))\n",
+    "model_A.add(keras.layers.Dense(8, activation=\"softmax\"))\n",
+    "model_A.compile(loss=\"sparse_categorical_crossentropy\",\n",
+    "                optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "                metrics=[\"accuracy\"])\n",
+    "history = model_A.fit(X_train_A, y_train_A, epochs=2,\n",
+    "                    validation_data=(X_valid_A, y_valid_A))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
