--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1223,7 +1223,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  51/1375 [>.............................] - ETA: 47s - loss: 1.5660 - accuracy: 0.4210"
+      "1375/1375 [==============================] - ETA: 0s - loss: 0.5919 - accuracy: 0.8066"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-17 15:46:51.727241: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1375/1375 [==============================] - 43s 30ms/step - loss: 0.5919 - accuracy: 0.8066 - val_loss: 0.4116 - val_accuracy: 0.8612\n",
+      "Epoch 2/2\n",
+      "1375/1375 [==============================] - 38s 28ms/step - loss: 0.3666 - accuracy: 0.8751 - val_loss: 0.3429 - val_accuracy: 0.8789\n"
      ]
     }
    ],
